--- a/parsing/Makefile
+++ b/parsing/Makefile
@@ -1,21 +1,29 @@
-src = parsing.c mini_utils.c minishell.c mini_utils_2.c sep_cmd.c counters.c expand_n.c ft_split.c\
-	ft_count_quotes.c mini_utils_3.c help_clean.c part_parsing.c #echo.c env.c libft_bonus.c redirections.c 
+NAME = minishell
+CC = gcc
+src = parsing.c mini_utils.c minishell.c mini_utils_2.c \
+			sep_cmd.c counters.c expand_n.c ft_split.c \
+ 			ft_count_quotes.c mini_utils_3.c help_clean.c \
+			part_parsing.c #echo.c env.c libft_bonus.c redirections.c 
+
+LIBFT = ../libs/libft/
+LIBS = $(addprefix $(LIBFT), libft.a)
 
 O_files = $(src:.c=.o)
 CFLAGS = -Wall -Wextra -Werror # -fsanitize=address -g3
 
-NAME = minishell
+all: libft $(NAME)
+
+libft:
+	@make -C $(LIBFT)
 
 $(NAME) : $(O_files)
-	gcc -lreadline $(CFLAGS) $(O_files)   -o $(NAME)
+	$(CC) $(CFLAGS) $(O_files) $(LIBS) -o $(NAME)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-all: $(NAME)
-
 clean : 
-	rm -rf $(O_files) $(bonus_O)
+	rm -rf $(O_files)
 
 fclean : clean
 	rm -rf $(NAME)
