--- a/libs/libft/Makefile
+++ b/libs/libft/Makefile
@@ -9,7 +9,7 @@ MANDATORY = ft_atoi.c ft_bzero.c ft_calloc.c ft_isalnum.c ft_isalpha.c \
 			ft_strlen.c ft_strncmp.c ft_strnstr.c ft_strrchr.c ft_tolower.c ft_toupper.c \
 			ft_memchr.c ft_memcmp.c ft_calloc.c ft_substr.c ft_strtrim.c ft_strjoin.c \
 			ft_split.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-			ft_strmapi.c ft_striteri.c ft_itoa.c leaks_curr.c  leaks_curr_utils.c ft_dprintf.c
+			ft_strmapi.c ft_striteri.c ft_itoa.c leaks_curr.c ft_dprintf.c
 
 MAN=$(MANDATORY:%.c=%.o)
 
